syntax = "proto3";

package de.unistuttgart.isw.sfsc.framework.protocol.channelfactory;

import "framework/descriptor/service.proto";

option java_multiple_files = true;

message ChannelFactoryRequest {
  bytes payload = 1;
}

message ChannelFactoryReply {
  de.unistuttgart.isw.sfsc.framework.descriptor.SfscServiceDescriptor service_descriptor = 1;
}

